# typetrace

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODING_STANDARDS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: memory_layout_spec.md  sample_inference_plan.md  showcase_xarray_pandas.md
docs/bot/: CONTEXT.md
requirements/: ci-constraints.txt
scripts/: wt_bootstrap.sh  wt_run.sh
specs/: README.md  recipes.yaml
src/typetrace/: __init__.py  concrete.py  core.py  execution_traits.py  inference.py  layout_ops.py  patterns.py  runtime_utils.py
src/typetrace/adapters/: __init__.py  arrow.py  drjit.py  numpy.py  pandas.py  polars.py  xarray.py
tests/: __init__.py  test_adapters.py  test_concrete.py  test_core.py  test_execution_traits.py  test_for_type.py  test_from_value_scalars.py  test_infer_by_execution_samples.py  test_inference.py  test_patterns.py  test_shape_contracts.py  test_showcase_xarray_pandas.py
tools/: generate_recipe_tests.py
