[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typetrace"
version = "0.1.0"
description = "Runtime type inference by execution for array libraries"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Robert Forler"}
]
keywords = ["types", "inference", "xarray", "pandas", "drjit", "dag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = []

[project.optional-dependencies]
xarray = ["xarray", "numpy"]
pandas = ["pandas"]
drjit = ["drjit"]
polars = ["polars"]
all = ["xarray", "numpy", "pandas", "drjit", "polars"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0",
    "numpy",
    "xarray",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/rforler/typetrace"
Repository = "https://github.com/rforler/typetrace"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src/typetrace"]
branch = true

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["src/typetrace/adapters/drjit.py"]
